src/org/ffmpeg/swresample/SwresampleLibrary.java

package org.ffmpeg.swresample;
import java.util.Collections;
import java.util.Iterator;
import org.bridj.BridJ;
import org.bridj.CRuntime;
import org.bridj.FlagSet;
import org.bridj.IntValuedEnum;
import org.bridj.Pointer;
import org.bridj.ann.Library;
import org.bridj.ann.Ptr;
import org.bridj.ann.Runtime;
import org.ffmpeg.avutil.AVClass;
import org.ffmpeg.avutil.AVFrame;
import org.ffmpeg.avutil.AvutilLibrary.AVSampleFormat;
/**
 * Wrapper for library <b>swresample</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> or <a href="http://bridj.googlecode.com/">BridJ</a> .
 */
@Library("swresample") 
@Runtime(CRuntime.class) 
public class SwresampleLibrary {
	static {
		BridJ.register();
	}
	/**
	 * Dithering algorithms<br>
	 * enum values<br>
	 * <i>native declaration : libswresample/swresample.h:17</i>
	 */
	public enum SwrDitherType implements IntValuedEnum<SwrDitherType > {
		SWR_DITHER_NONE(0),
		SWR_DITHER_RECTANGULAR(1),
		SWR_DITHER_TRIANGULAR(2),
		SWR_DITHER_TRIANGULAR_HIGHPASS(3),
		/** < not part of API/ABI */
		SWR_DITHER_NS(64),
		SWR_DITHER_NS_LIPSHITZ(65),
		SWR_DITHER_NS_F_WEIGHTED(66),
		SWR_DITHER_NS_MODIFIED_E_WEIGHTED(67),
		SWR_DITHER_NS_IMPROVED_E_WEIGHTED(68),
		SWR_DITHER_NS_SHIBATA(69),
		SWR_DITHER_NS_LOW_SHIBATA(70),
		SWR_DITHER_NS_HIGH_SHIBATA(71),
		/** < not part of API/ABI */
		SWR_DITHER_NB(72);
		SwrDitherType(long value) {
			this.value = value;
		}
		public final long value;
		public long value() {
			return this.value;
		}
		public Iterator<SwrDitherType > iterator() {
			return Collections.singleton(this).iterator();
		}
		public static IntValuedEnum<SwrDitherType > fromValue(int value) {
			return FlagSet.fromValue(value, values());
		}
	};
	/**
	 * Resampling Engines<br>
	 * enum values<br>
	 * <i>native declaration : libswresample/swresample.h:24</i>
	 */
	public enum SwrEngine implements IntValuedEnum<SwrEngine > {
		/** < SW Resampler */
		SWR_ENGINE_SWR(0),
		/** < SoX Resampler */
		SWR_ENGINE_SOXR(1),
		/** < not part of API/ABI */
		SWR_ENGINE_NB(2);
		SwrEngine(long value) {
			this.value = value;
		}
		public final long value;
		public long value() {
			return this.value;
		}
		public Iterator<SwrEngine > iterator() {
			return Collections.singleton(this).iterator();
		}
		public static IntValuedEnum<SwrEngine > fromValue(int value) {
			return FlagSet.fromValue(value, values());
		}
	};
	/**
	 * Resampling Filter Types<br>
	 * enum values<br>
	 * <i>native declaration : libswresample/swresample.h:30</i>
	 */
	public enum SwrFilterType implements IntValuedEnum<SwrFilterType > {
		/** < Cubic */
		SWR_FILTER_TYPE_CUBIC(0),
		/** < Blackman Nuttall Windowed Sinc */
		SWR_FILTER_TYPE_BLACKMAN_NUTTALL(1),
		/** < Kaiser Windowed Sinc */
		SWR_FILTER_TYPE_KAISER(2);
		SwrFilterType(long value) {
			this.value = value;
		}
		public final long value;
		public long value() {
			return this.value;
		}
		public Iterator<SwrFilterType > iterator() {
			return Collections.singleton(this).iterator();
		}
		public static IntValuedEnum<SwrFilterType > fromValue(int value) {
			return FlagSet.fromValue(value, values());
		}
	};
	/**
	 * Conversion Error : a.num<br>
	 * SKIPPED:<br>
	 * <i>native declaration : libavutil/rational.h:0</i><br>
	 * const int64_t tmp = a.num * (int64_t)b.den - b.num * (int64_t)a.den;
	 */
	/** <i>native declaration : libswresample/swresample.h</i> */
	public static final int SWR_FLAG_RESAMPLE = (int)1;
	/** <i>native declaration : ./libswresample/version.h</i> */
	public static final String LIBSWRESAMPLE_IDENT = (String)"SwR1.2.101";
	/** <i>native declaration : ./libswresample/version.h</i> */
	public static final int LIBSWRESAMPLE_BUILD = (int)((1) << 16 | (2) << 8 | (101));
	/** <i>native declaration : ./libswresample/version.h</i> */
	public static final int LIBSWRESAMPLE_VERSION_MICRO = (int)101;
	/** <i>native declaration : ./libswresample/version.h</i> */
	public static final int LIBSWRESAMPLE_VERSION_MAJOR = (int)1;
	/** <i>native declaration : ./libswresample/version.h</i> */
	public static final int LIBSWRESAMPLE_VERSION_MINOR = (int)2;
	/**
	 * define<br>
	 * Conversion Error : 1.2.<br>
	 * SKIPPED:<br>
	 * <i>native declaration : ./libswresample/version.h:0</i><br>
	 * 1.2.
	 */
	/** <i>native declaration : ./libswresample/version.h</i> */
	public static final int LIBSWRESAMPLE_VERSION_INT = (int)((1) << 16 | (2) << 8 | (101));
	/**
	 * Get the AVClass for SwrContext. It can be used in combination with<br>
	 * AV_OPT_SEARCH_FAKE_OBJ for examining options.<br>
	 * * @see av_opt_find().<br>
	 * @return the AVClass of SwrContext<br>
	 * Original signature : <code>AVClass* swr_get_class()</code><br>
	 * <i>native declaration : libswresample/swresample.h:45</i>
	 */
	public static Pointer<AVClass > swr__get_class() {
		return Pointer.pointerToAddress(swr_get_class(), AVClass.class);
	}
	@Ptr 
	protected native static long swr_get_class();
	/**
	 * Allocate SwrContext.<br>
	 * * If you use this function you will need to set the parameters (manually or<br>
	 * with swr_alloc_set_opts()) before calling swr_init().<br>
	 * * @see swr_alloc_set_opts(), swr_init(), swr_free()<br>
	 * @return NULL on error, allocated context otherwise<br>
	 * Original signature : <code>SwrContext* swr_alloc()</code><br>
	 * <i>native declaration : libswresample/swresample.h:54</i>
	 */
	public static Pointer<SwresampleLibrary.SwrContext > swr__alloc() {
		return Pointer.pointerToAddress(swr_alloc(), SwresampleLibrary.SwrContext.class);
	}
	@Ptr 
	protected native static long swr_alloc();
	/**
	 * Initialize context after user parameters have been set.<br>
	 * @note The context must be configured using the AVOption API.<br>
	 * * @see av_opt_set_int()<br>
	 * @see av_opt_set_dict()<br>
	 * * @param[in,out]   s Swr context to initialize<br>
	 * @return AVERROR error code in case of failure.<br>
	 * Original signature : <code>int swr_init(SwrContext*)</code><br>
	 * <i>native declaration : libswresample/swresample.h:64</i>
	 */
	public static int swr_init(Pointer<SwresampleLibrary.SwrContext > s) {
		return swr_init(Pointer.getPeer(s));
	}
	protected native static int swr_init(@Ptr long s);
	/**
	 * Check whether an swr context has been initialized or not.<br>
	 * * @param[in]       s Swr context to check<br>
	 * @see swr_init()<br>
	 * @return positive if it has been initialized, 0 if not initialized<br>
	 * Original signature : <code>int swr_is_initialized(SwrContext*)</code><br>
	 * <i>native declaration : libswresample/swresample.h:72</i>
	 */
	public static int swr_is_initialized(Pointer<SwresampleLibrary.SwrContext > s) {
		return swr_is_initialized(Pointer.getPeer(s));
	}
	protected native static int swr_is_initialized(@Ptr long s);
	/**
	 * Allocate SwrContext if needed and set/reset common parameters.<br>
	 * * This function does not require s to be allocated with swr_alloc(). On the<br>
	 * other hand, swr_alloc() can use swr_alloc_set_opts() to set the parameters<br>
	 * on the allocated context.<br>
	 * * @param s               existing Swr context if available, or NULL if not<br>
	 * @param out_ch_layout   output channel layout (AV_CH_LAYOUT_*)<br>
	 * @param out_sample_fmt  output sample format (AV_SAMPLE_FMT_*).<br>
	 * @param out_sample_rate output sample rate (frequency in Hz)<br>
	 * @param in_ch_layout    input channel layout (AV_CH_LAYOUT_*)<br>
	 * @param in_sample_fmt   input sample format (AV_SAMPLE_FMT_*).<br>
	 * @param in_sample_rate  input sample rate (frequency in Hz)<br>
	 * @param log_offset      logging level offset<br>
	 * @param log_ctx         parent logging context, can be NULL<br>
	 * * @see swr_init(), swr_free()<br>
	 * @return NULL on error, allocated context otherwise<br>
	 * Original signature : <code>SwrContext* swr_alloc_set_opts(SwrContext*, int64_t, AVSampleFormat, int, int64_t, AVSampleFormat, int, int, void*)</code><br>
	 * <i>native declaration : libswresample/swresample.h:91</i>
	 */
	public static Pointer<SwresampleLibrary.SwrContext > swr_alloc_set_opts(Pointer<SwresampleLibrary.SwrContext > s, long out_ch_layout, IntValuedEnum<AVSampleFormat > out_sample_fmt, int out_sample_rate, long in_ch_layout, IntValuedEnum<AVSampleFormat > in_sample_fmt, int in_sample_rate, int log_offset, Pointer<? > log_ctx) {
		return Pointer.pointerToAddress(swr_alloc_set_opts(Pointer.getPeer(s), out_ch_layout, (int)out_sample_fmt.value(), out_sample_rate, in_ch_layout, (int)in_sample_fmt.value(), in_sample_rate, log_offset, Pointer.getPeer(log_ctx)), SwresampleLibrary.SwrContext.class);
	}
	@Ptr 
	protected native static long swr_alloc_set_opts(@Ptr long s, long out_ch_layout, int out_sample_fmt, int out_sample_rate, long in_ch_layout, int in_sample_fmt, int in_sample_rate, int log_offset, @Ptr long log_ctx);
	/**
	 * Free the given SwrContext and set the pointer to NULL.<br>
	 * * @param[in] s a pointer to a pointer to Swr context<br>
	 * Original signature : <code>void swr_free(SwrContext**)</code><br>
	 * <i>native declaration : libswresample/swresample.h:97</i>
	 */
	public static void swr_free(Pointer<Pointer<SwresampleLibrary.SwrContext > > s) {
		swr_free(Pointer.getPeer(s));
	}
	protected native static void swr_free(@Ptr long s);
	/**
	 * Closes the context so that swr_is_initialized() returns 0.<br>
	 * * The context can be brought back to life by running swr_init(),<br>
	 * swr_init() can also be used without swr_close().<br>
	 * This function is mainly provided for simplifying the usecase<br>
	 * where one tries to support libavresample and libswresample.<br>
	 * * @param[in,out] s Swr context to be closed<br>
	 * Original signature : <code>void swr_close(SwrContext*)</code><br>
	 * <i>native declaration : libswresample/swresample.h:107</i>
	 */
	public static void swr_close(Pointer<SwresampleLibrary.SwrContext > s) {
		swr_close(Pointer.getPeer(s));
	}
	protected native static void swr_close(@Ptr long s);
	/**
	 * Convert audio.<br>
	 * * in and in_count can be set to 0 to flush the last few samples out at the<br>
	 * end.<br>
	 * * If more input is provided than output space, then the input will be buffered.<br>
	 * You can avoid this buffering by using swr_get_out_samples() to retrieve an<br>
	 * upper bound on the required number of output samples for the given number of<br>
	 * input samples. Conversion will run directly without copying whenever possible.<br>
	 * * @param s         allocated Swr context, with parameters set<br>
	 * @param out       output buffers, only the first one need be set in case of packed audio<br>
	 * @param out_count amount of space available for output in samples per channel<br>
	 * @param in        input buffers, only the first one need to be set in case of packed audio<br>
	 * @param in_count  number of input samples available in one channel<br>
	 * * @return number of samples output per channel, negative value on error<br>
	 * Original signature : <code>int swr_convert(SwrContext*, uint8_t**, int, const uint8_t**, int)</code><br>
	 * <i>native declaration : libswresample/swresample.h:124</i>
	 */
	public static int swr_convert(Pointer<SwresampleLibrary.SwrContext > s, Pointer<Pointer<Byte > > out, int out_count, Pointer<Pointer<Byte > > in, int in_count) {
		return swr_convert(Pointer.getPeer(s), Pointer.getPeer(out), out_count, Pointer.getPeer(in), in_count);
	}
	protected native static int swr_convert(@Ptr long s, @Ptr long out, int out_count, @Ptr long in, int in_count);
